@@ -1,0 +1,59 @@
+                 SpliceHack -- Guide for New Players
+
+This guide functions as an introduction to SpliceHack for players who do not
+want to be heavily spoiled. This guide assumes you have experience with vanilla
+NetHack. If not, please refer to the guidebook.
+
+SpliceHack plays very similarly to vanilla NetHack, and is designed to be easy
+for players to adapt to. The following points should bring you up to speed with
+the main differences. For a full list of changes that include spoilers, please
+see the changelog.
+
+- The first difference you will notice is the addition of several new roles and
+  races.
+  Roles:
+  - Cartomancers are a scroll-focused role that are designed as an homage to
+    the culture surrounding trading cards. They can get free uses out of
+    scrolls, but have bad proficiencies and receive alignment penalties for
+    using a magic marker.
+  - Dragonmasters start with a saddled baby dragon, which they raise over time.
+    They cannot wear dragon scale mail.
+  Races:
+  - Lycanthropes are similar to humans, but have permanent, incurable
+    lycanthropy. In SpliceHack, changing into your animal form will anger
+    guards, which makes this race very difficult. Unlike SLASH'EM, you will
+    break out of your armor when changing.
+  - Angelic creatures can fly and have no opposed races, but aggravate monsters
+    and have a poor set of abilities.
+  - Infernal creatures have high maximum abilities and can regenerate, but many
+    monsters are hostile to them and they are vulnerable to silver. In
+    SpliceHack, silver will deal extra damage to you just like it does to
+    monsters.
+  - Merfolk can swim and eventually breathe water, but also suffer from a poor
+    set of ability scores. Overall, they are one of the easier races.
+
+- The next thing you may notice is your starting pet. You can start with a bird
+  instead of a cat or a dog. They are balanced similarly to other pets, but
+  may require a few tweaks at some point.
+- There are many new monsters and items in SpliceHack. In order to avoid an
+  untimely death, make ample use of the farlook command to make sure things are
+  what you think they are. Many of the monsters have new abilities that can
+  be dangerous to the unaware.
+- SpliceHack contains a number of new artifacts. Sacrificing at altars can yield
+  different items than you might expect, some of which are quite powerful.
+- Monster behavior in SpliceHack may take a little time to get used to. Monsters
+  are capable of using a wider variety of items than in vanilla. Additionally,
+  the implementation of the grudge patch can lead to monster brawls. Finally,
+  monsters can and will sacrifice corpses at coaligned altars.
+- Most monsters that originate from vanilla function the same way. The largest
+  exception to this is dragons, which have been made scarier.
+- Demon lords are not as straightforward about their bribes. Read what they
+  say very carefully.
+- The ascension run portion of the game in SpliceHack is very different. While
+  the mysterious force is no longer an issue, there are several other challenges
+  that begin upon completion of the invocation ritual.
+- The Oracle's major consultations have been expanded, and she may drop hints
+  about some of the other changes in the game.
+
+While many other differences from vanilla exist, this information should be
+enough to prepare you for SpliceHack. Enjoy and good luck.
