@@ -2,7 +2,7 @@
 /* Copyright (c) Stichting Mathematisch Centrum, Amsterdam, 1985. */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 4/18/18 by NullCGT */
+/* Edited on 4/20/18 by NullCGT */
 
 #include "hack.h"
 
@@ -1349,6 +1349,9 @@ int mmflags;
     if ((ct = emits_light(mtmp->data)) > 0)
         new_light_source(mtmp->mx, mtmp->my, ct, LS_MONSTER,
                          monst_to_any(mtmp));
+    /* lycanthropes are peaceful to natural lycanthropes */
+    if (is_were(mtmp->data) && Race_if(PM_HUMAN_WEREWOLF))
+        mtmp->mpeaceful = TRUE;
     mitem = 0; /* extra inventory item for this monster */
 
     if (mndx == PM_VLAD_THE_IMPALER)
