@@ -283,7 +283,7 @@ NEARDATA struct permonst mons[] = {
     MON("memory hound", S_DOG, LVL(7, 12, 2, 0, 3), (G_GENO | 2),
         A(ATTK(AT_BITE, AD_MEMR, 3, 4), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
-        SIZ(250, 200, MS_HISS, MZ_SMALL), MR_COLD, MR_COLD,
+        SIZ(250, 200, MS_BARK, MZ_SMALL), MR_COLD, MR_COLD,
         M1_NOHANDS | M1_CARNIVORE, M2_HOSTILE, M3_INFRAVISION, CLR_BLUE),
     MON("winter wolf", S_DOG, LVL(7, 12, 4, 20, 0), (G_NOHELL | G_GENO | 1),
         A(ATTK(AT_BITE, AD_PHYS, 2, 6), ATTK(AT_BREA, AD_COLD, 2, 6), NO_ATTK,
@@ -439,6 +439,12 @@ NEARDATA struct permonst mons[] = {
         SIZ(600, 300, MS_GROWL, MZ_LARGE), 0, 0,
         M1_ANIMAL | M1_NOHANDS | M1_CARNIVORE, M2_HOSTILE, M3_INFRAVISIBLE,
         CLR_ORANGE),
+    MON("serpopard", S_FELINE, LVL(6, 15, 6, 0, 0), (G_GENO | 1),
+        A(ATTK(AT_CLAW, AD_PHYS, 2, 3), ATTK(AT_CLAW, AD_PHYS, 2, 3),
+          ATTK(AT_BITE, AD_PHYS, 1, 8), NO_ATTK, NO_ATTK, NO_ATTK),
+        SIZ(600, 300, MS_GROWL, MZ_LARGE), 0, 0,
+        M1_ANIMAL | M1_SLITHY | M1_NOHANDS | M1_CARNIVORE, M2_HOSTILE,
+        M3_INFRAVISIBLE, CLR_BLUE),
     /* Lions hunt in packs, and the females do most of the hunting */
     MON("lion", S_FELINE, LVL(6, 12, 6, 0, 0), (G_GENO | G_SGROUP | 2),
         A(ATTK(AT_CLAW, AD_PHYS, 2, 4), ATTK(AT_CLAW, AD_PHYS, 2, 4),
@@ -808,6 +814,12 @@ NEARDATA struct permonst mons[] = {
         SIZ(2500, 500, MS_HISS, MZ_LARGE), MR_SLEEP, MR_SLEEP,
         M1_FLY | M1_ANIMAL | M1_NOHANDS | M1_CARNIVORE,
         M2_HOSTILE | M2_STRONG, M3_INFRAVISIBLE, CLR_YELLOW),
+    MON("chimera", S_QUADRUPED, LVL(10, 12, 4, 20, -1), (G_GENO | 2),
+        A(ATTK(AT_BITE, AD_PHYS, 1, 10), ATTK(AT_BITE, AD_DRST, 2, 4),
+          ATTK(AT_BUTT, AD_PHYS, 2, 4), NO_ATTK, NO_ATTK, NO_ATTK),
+        SIZ(2500, 500, MS_CHIMERA, MZ_LARGE), MR_FIRE, MR_FIRE,
+        M1_FLY | M1_ANIMAL | M1_NOHANDS | M1_CARNIVORE, M2_HOSTILE | M2_STRONG |
+        M2_NASTY, M3_INFRAVISIBLE, CLR_GREEN),
     MON("titanothere", S_QUADRUPED, LVL(12, 12, 6, 0, 0), (G_GENO | 2),
         A(ATTK(AT_CLAW, AD_PHYS, 2, 8), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
@@ -2065,6 +2077,18 @@ struct permonst _mons2[] = {
         M1_SWIM | M1_CONCEAL | M1_NOLIMBS | M1_ANIMAL | M1_SLITHY | M1_POIS
             | M1_CARNIVORE | M1_OVIPAROUS | M1_NOTAKE,
         M2_HOSTILE, 0, CLR_BLUE),
+    MON("cerastes", S_SNAKE, LVL(7, 0, 15, 10, 0), (G_GENO | 2),
+        A(ATTK(AT_BITE, AD_PHYS, 1, 6), ATTK(AT_BUTT, AD_PHYS, 1, 8), NO_ATTK,
+          NO_ATTK, NO_ATTK, NO_ATTK),
+        SIZ(600, 250, MS_SILENT, MZ_LARGE), 0, 0,
+        M1_ANIMAL | M1_SLITHY | M1_NOLIMBS | M1_CARNIVORE | M1_NOTAKE |
+        M1_CONCEAL, M2_HOSTILE, 0, CLR_YELLOW),
+    MON("lindorm", S_SNAKE, LVL(7, 7, 1, 20, -4), (G_GENO | 3),
+        A(ATTK(AT_BITE, AD_PHYS, 2, 4), ATTK(AT_CLAW, AD_PHYS, 1,4),
+          ATTK(AT_CLAW, AD_PHYS, 1, 4), NO_ATTK, NO_ATTK, NO_ATTK),
+          SIZ(600, 250, MS_HISS, MZ_LARGE), 0, 0,
+          M1_ANIMAL | M1_SLITHY | M1_OVIPAROUS | M1_CARNIVORE | M1_SEE_INVIS,
+          M2_HOSTILE, M3_INFRAVISION, CLR_CYAN),
     MON("amphisbaena", S_SNAKE, LVL(9, 3, 5, 0, -3), (G_GENO | 1),
         A(ATTK(AT_BITE, AD_DRST, 2, 4), ATTK(AT_BITE, AD_DRST, 2, 4),
           ATTK(AT_TUCH, AD_PHYS, 0, 0), ATTK(AT_HUGS, AD_PHYS, 2, 4), NO_ATTK,
@@ -3082,7 +3106,7 @@ struct permonst _mons2[] = {
         SIZ(1500, 300, MS_NEIGH, MZ_LARGE), 0, 0,
         M1_ANIMAL | M1_NOHANDS | M1_HERBIVORE | M1_SWIM | M1_AMPHIBIOUS |
         M1_SLITHY,
-        M2_WANDER | M2_STRONG | M2_DOMESTIC, M3_INFRAVISIBLE, CLR_BROWN),
+        M2_WANDER | M2_STRONG | M2_DOMESTIC, M3_INFRAVISIBLE, HI_DOMESTIC),
     MON("shark", S_EEL, LVL(7, 12, 2, 0, 0), (G_GENO | G_NOGEN),
         A(ATTK(AT_BITE, AD_PHYS, 5, 6), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
