@@ -296,6 +296,10 @@ New Monsters
 - Mystic Scarab
 - Goblin Windmage
 - Whirling Sphere
+- Chimera
+- Cerastes
+- Serpopard
+- Lindorm
 - Cartomancer (Player Monster)
 - Dragonmaster (Player Monster)
 - Drake (Dragonmaster Quest)
